MJ 21/10/2004
- some refactoring of the most recent changes for simplification and
  clarification and which include
  - moving order-handling into Configuration and so removing it from the
    rest of the code: now ordering is transparent to Simulator.
  - removing setPid from Configuration and funtionality to assign ID-s to
    protocols names is also moved into Configuration completely. The rest of
    the code now can use simply getPid after loading the config to get
    protocol id.
  - separating alternative style of configuration to the new OrderSimulator
    that now extends the basic Simulator class. to use the config property
    "order" you need to launch OrderSimultor. All other features and orderings
    like "order.protocol" are understood by Simulator too.
- enhancement of documentation by adding stuff written by Alberto to the class
  docs of OrderSimulator and Configuration.

AM 17/10/2004
- RangeSimulator: now it works by calling Simulator, so we don't
  need to maintain two simulators. Using RangeSimulator
  you can write stuff like this:
  range.0 MAG;10:18
  meaning that the variable MAG will go from 10 to 18.
- Expression parsing added. Now it is possible to use expression in place
  of simple numeric values in the configuration (with all simulators),
  using property names as symbols.
  [JM 21/10/2004: See the class docs of Configuration]
- Protocol schedulers. 
  Now protocols are scheduled as the other objects. Eg you can execute
  a protocol every two steps.
- now it's possible to use not only number but also any
  alphanumeric symbol to identify a protocol, observer, etc (eg protocol.first).
  The Configuration now has a getPid method that assigns a fixed numeric ID to
  a protocol, becuase it is still much more efficient to use numbers
  internally.
  
  !!WARNING!!: this change is backwards compatible but if you want to use
  arbitrary protocol id-s in you new config files, you mut use the